[tool.poetry]
name = "charlib"
version = "1.1.0"
description = "An open-source standard cell library characterizer"
repository = "https://github.com/stineje/CharLib"
authors = [
	"Marcus Mellor <infinitymdm@gmail.com>",
	"James Stine <james.stine@okstate.edu",
]
license = "GPL-2.0"
readme = "README.md"
packages = [{include = "charlib"}]

[tool.poetry.dependencies]
python = ">=3.11"
pyspice = {git = "https://github.com/infinitymdm/PySpice.git"} # PyPI doesn't allow git installs for security reasons. Comment this out for published releases.
liberty-parser = ">=0.0.23"
pyyaml = ">=6.0.1"
numpy = ">=2.0.0"
matplotlib = ">=3.8.2"

[tool.poetry.scripts]
charlib = "charlib.characterizer.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
